--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node backend/index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
